--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/api"
-    }
-  ]
+  "outputDirectory": "dist/public"
 }
