Fix SSL/TLS database connection for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,21 @@
-# Database Configuration
+##### Backend / Server (Render)
+
+# Database Configuration (PostgreSQL)
 DATABASE_URL=postgresql://user:password@host:port/database
 
 # JWT Secret for authentication
 JWT_SECRET=your-secret-key-here
 
-# Node Environment (production for deployment)
+# Node Environment
 NODE_ENV=production
 
-# Port (Vercel will set this automatically)
+# Port (Render will set this automatically; usually do NOT override)
 PORT=5000
+
+##### Frontend (Vite)
+
+# When deploying frontend and backend together on Render (same service),
+# leave this empty so the app uses same-origin /api.
+# If you ever host the API separately, set the full URL here, e.g.:
+# VITE_API_BASE_URL=https://your-api.onrender.com
+VITE_API_BASE_URL=
